--- a/css/style.css
+++ b/css/style.css
@@ -484,6 +484,7 @@ a:hover .menu {
 .main_projects_cont {
     position: relative;
     margin-bottom: 40px;
+    opacity:0;
 }
 
 .left_nav {
@@ -553,7 +554,18 @@ a:hover .menu {
 .title_cont {
     float: left;
     margin: 0px 0px 20px 35px;
+    padding: 0;
     font-size: 21px;
+    font-family: JunegullRegular, Arial black;
+    font-weight: normal;
+    color: #000;
+    text-transform: uppercase;
+}
+.title_subcont {
+    text-align: left;
+    margin: 0px 0px 20px 0px;
+    padding: 0;
+    font-size: 16px;
     font-family: JunegullRegular, Arial black;
     font-weight: normal;
     color: #000;
