--- a/css/style.css
+++ b/css/style.css
@@ -830,7 +830,7 @@ a:hover .menu {
     border-bottom: 1px solid #A8A9A8;
 }
 .tabs {
-    position: relative;
+    position: absolute;
     top: -42px;
 }
 .tabs ul {
@@ -922,19 +922,42 @@ a:hover .menu {
     -moz-border-radius: 20px;
     -webkit-border-radius: 20px;
 }
+.item-body {
+    margin-right: 360px;
+}
 .right-bar.item-show-bar {
     width:300px;
-    padding:20px;
+}
+a.pane {
+    display: block;
+    transition: background 1s;
+    -webkit-transition: background 1s;
+    -moz-transition: background 1s;
+}
+
+a.pane:hover {
+    background: #f2f2f2;
+    transition: background 1s;
+    -webkit-transition: background 1s;
+    -moz-transition: background 1s;
+}
+
+.pane {
     background: #fff;
     box-shadow: 0 0 3px #999;
     border-radius: 15px;
     -moz-border-radius: 15px;
     -webkit-border-radius: 15px;
 }
-.right-bar.item-show-bar .price span{
-    font-size: 24px;
+.pane .pane-cont {
+    padding:20px;
 }
-.right-bar.item-show-bar .price span{
+.price { 
+    font-size: 24px;
+    color:#000;
+}
+.price span{
+    color:#000;
     font-size: 30px;
     font-weight: bold;
 }
@@ -942,6 +965,69 @@ a:hover .menu {
     float:right;
     width:230px;
 }
+.trgndtime {
+    background: url(/images/trgndtime.png) no-repeat;
+    height: 65px;
+}
+.trgndtime ul {
+    list-style: none;
+    padding:0 0 0 35px;
+    margin: 0;
+}
+.trgndtime ul li {
+    padding:9px 0px 10px;
+    font-size: 13px;
+    font-style: italic;
+}
+.invest_big {
+    margin: 0px;
+    font-family: JunegullRegular, Arial black;
+    font-weight: normal;
+    font-size: 21px;
+    color: #fff;
+    text-transform: uppercase;
+    text-shadow: 1px 1px 3px #999;
+    display: block;
+    padding:15px 0 ;
+    text-align: center;
+    border-radius: 0 0 15px 15px;
+    -moz-border-radius: 0 0 15px 15px;
+    -webkit-border-radius: 0 0 15px 15px;
+    background: #76cc1e;
+    background: -webkit-linear-gradient(top, #76cc1e, #38a404);
+    background: -moz-linear-gradient(top, #76cc1e, #38a404);
+    background: -o-linear-gradient(top, #76cc1e, #38a404);
+    background: -ms-linear-gradient(top, #76cc1e, #38a404);
+    background: linear-gradient(top, #76cc1e, #38a404);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#76cc1e), color-stop(100%,#38a404));
+}
+.invest_big:hover {
+    background: #92d839;
+    background: -webkit-linear-gradient(top, #92d839, #58b80a);
+    background: -moz-linear-gradient(top, #92d839, #58b80a);
+    background: -o-linear-gradient(top, #92d839, #58b80a);
+    background: -ms-linear-gradient(top, #92d839, #58b80a);
+    background: linear-gradient(top, #92d839, #58b80a);
+    background: -webkit-gradient(linear, left top, left bottom, 
+        color-stop(0%,#92d839), color-stop(100%,#58b80a));    
+}
+
+.invest-label {
+    font-size: 16px;
+    font-weight: bold;
+    padding:30px 20px 20px;
+}
+.hr {
+    margin: 10px 0;
+    font-size: 0;
+    line-height: 0;
+    height: 1px;
+    background: #ccc;
+}
+.share {
+    padding: 20px;
+}
+
 /* ==|== non-semantic helper classes ============;============================ */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
 .ir br { display: none; }
