--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,8 @@ a:hover .menu {
 
 .body {
     margin: auto;
-    width: 980px;
+    width: 920px;
+    padding: 0 30px;
 }
 
 .main_projects_cont {
@@ -923,7 +924,7 @@ a:hover .menu {
     -webkit-border-radius: 20px;
 }
 .item-body {
-    margin-right: 360px;
+    margin-right: 320px;
 }
 .right-bar.item-show-bar {
     width:300px;
@@ -945,9 +946,9 @@ a.pane:hover {
 .pane {
     background: #fff;
     box-shadow: 0 0 3px #999;
-    border-radius: 15px;
-    -moz-border-radius: 15px;
-    -webkit-border-radius: 15px;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
 }
 .pane .pane-cont {
     padding:20px;
