--- a/css/style.css
+++ b/css/style.css
@@ -186,15 +186,43 @@ body {
     font-family: JunegullRegular, Arial black;
     font-weight: normal;
     text-transform: uppercase;
+    font-size: 20px;
     color: #FFF;
-    display: inline-block;
-    width: 32px;
     height:32px;
-    font-size: 2em;
-    text-align: center;
-    border: 5px solid #2af;
-    border-radius: 32px;
-    background: #00F;
+    z-index: 10;
+    display: inline-block;
+    padding:4px 14px 0 8px;
+    position:absolute;
+    left:0px;
+    top: 137px;
+    background: url(/images/ribbon_tile.png) repeat-x 0 0;
+}
+.partner-mark a {
+    font-family: JunegullRegular, Arial black;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: #FFF;
+    text-decoration: none;
+}
+.partner-mark a:hover {
+    text-decoration: underline;
+}
+.partner-mark i {
+    height:36px;
+    width:6px;
+    position: absolute;
+    left:-6px;
+    top:0px;
+    background: url(/images/ribbon_left.png) no-repeat 0 0;
+}
+.partner-mark b {
+    height:36px;
+    width:7px;
+    position: absolute;
+    right:-7px;
+    top:0px;
+    background: url(/images/ribbon_right.png) no-repeat 0 0;
 }
 
 h1 {
@@ -728,11 +756,16 @@ a:hover .menu {
 }
 
 .project_pic {
-
+    width: 208px;
+    height: 160px;
+    overflow: hidden;
+    background-color:#ccc;
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
 }
 .project_pic img {
-    max-width: 208px;
-    max-height: 208px;
+    width: 208px;
+    height: 160px;
 }
 
 .project_text_cont {
