--- a/css/style.css
+++ b/css/style.css
@@ -1256,6 +1256,7 @@ a.pane:hover {
     }
     .project-p-content {
         margin-left: 115px;
+        word-break:break-all;
     }
     .project-p-content a.grey_link {
         font-size:16px;
